@@ -16,6 +16,7 @@ and configure everything.
 
 import sys
 import os
+import errno
 import espresso
 from espresso import misc
 
@@ -55,8 +56,14 @@ def prepend_path(directory):
 if __name__ == '__main__':
     if not os.path.exists(os.path.dirname(log_file)):
         os.makedirs(os.path.dirname(log_file))
-    sys.stderr = open(log_file, 'a', 1)
-    os.dup2(sys.stderr.fileno(), 2)
+    # The frontend should take care of displaying a helpful message if we
+    # are being run without root privileges.
+    try:
+        sys.stderr = open(log_file, 'a', 1)
+        os.dup2(sys.stderr.fileno(), 2)
+    except IOError, err:
+        if err.errno != errno.EACCES:
+            raise
 
     if cdebconf:
         # Note that this needs to be set before DebconfCommunicate is
