@@ -9,6 +9,8 @@ espresso (0.99.17) UNRELEASED; urgency=low
   * Add a "Ready to install" summary page. (It doesn't contain all the
     necessary information yet, and it should run before partitioning is
     committed rather than after, but that will be easy to fix later.)
+  * In the GTK frontend, display an error dialog and exit if running as
+    non-root.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 23 Feb 2006 20:06:28 +0000
 
